deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami-jenkins
  labels:
    app: whoami-jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-jenkins
  template:
    metadata:
      labels:
        app: whoami-jenkins
    spec:
      containers:
        - name: whoami-jenkins
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: whoami-jenkins
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
  selector:
    app: whoami-jenkins
