ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "whoami-jenkins"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: whoami-jenkins.ridha-bouazizi.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-jenkins
                port:
                  number: 80
